# Investment-Manager

./: .env.template  Demo.md  LICENSE  README.md  Tasks.md  agent.py  critic.py  docker-compose.yaml  kb.py  portfolio.py  price.py  pyproject.toml  stock_transactions.csv
prompts/: prompt1.txt  prompt2.txt  prompt3.txt
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/models/: api.py  models.py
tools/: __init__.py  kb.py  portfolio.py  price.py  stock_transactions.csv
