[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sameer Segal <sameersegal@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
